--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-source "/usr/share/powerline/bindings/tmux/powerline.conf"
+#source "/usr/share/powerline/bindings/tmux/powerline.conf"
 
 # Remap prefix from 'C-b' to 'C-a'. ($setxkbmap -option "ctrl:nocaps")
 unbind C-b
